# Shannon-game

./: .gitignore  README.md  config.txt  pom.xml
.github/workflows/: maven-publish.yml
backend_server/: .env  Cargo.toml
backend_server/src/: main.rs
src/: main.dot  main.uml
src/main/java/fr/projet/: Callback.java  Game.java  Graph.java  Main.java  Turn.java  Vertex.java
src/main/java/fr/projet/Graph/: Graph.java  Vertex.java
src/main/java/fr/projet/Gui/: Gui.java
src/main/java/fr/projet/IA/: BasicAI.java  InterfaceIA.java  Minimax.java
src/main/java/fr/projet/WebSocket/: WebSocketClient.java
src/main/java/fr/projet/game/: Game.java  Level.java  Turn.java  TypeJeu.java
src/main/java/fr/projet/graph/: Graph.java  Vertex.java
src/main/java/fr/projet/gui/: AnimationType.java  Animations.java  ButtonClickType.java  Etoile.java  Gui.java  GuiScene.java  HandleClick.java  JoinCreateField.java  UtilsGui.java
src/main/java/fr/projet/ia/: BasicAI.java  InterfaceIA.java  Minimax.java  WinnerStrat.java
src/main/java/fr/projet/server/: HttpsClient.java  WebSocketClient.java
src/main/java/fr/projet/serverClient/: Client.java
src/main/resources/: animations.json
src/test/java/fr/projet/: MainTest.java
