[package]
name = "backend_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = {version = "0.7.4", features = ["tracing", "ws"]}
rand = "0.8.5"
serde ={ version = "1.0.195", features = ["derive"]}
futures = "0.3.30"
serde_json = "1.0.111"
mongodb = "2.8.2"
dotenv = "0.15.0"
bcrypt = "0.15.1"
